jsonschemadsl2ecore.trafo.opt/test/test02/invalidtests/example4.test2
{
	"name":"John",
	"surname":"Smith",
	"age":55,
	"adult":true,
	"job":{
		"role":"enngineer",
		"level":1
	}
	
}